Remove DT_RUNPATH entries from all libraries, add clarifying comments about DT_RPATH/DT_RUNPATH behavior.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,8 @@ if(UNIX)
     set(CMAKE_INSTALL_NAME_DIR "@executable_path/../Frameworks")
     set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
   else()
-    # We need to use RPATH, not RUNPATH
+    # On Linux, we need to use RPATH instead of RUNPATH, so our settings can
+    # apply recursively to all shared library dependencies.
     add_flag_append(CMAKE_Pascal_FLAGS "-k--disable-new-dtags")
     set(CMAKE_INSTALL_RPATH
       "$ORIGIN/../${target_library_install_dir}/:$ORIGIN/"
