Fix cannot compile GameNetworkingSockets due to old c++ standard (need c++17)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,8 @@ if(BUILD_SERVER)
   add_subdirectory(server)
 endif()
 
+set_property(TARGET GameNetworkingSockets PROPERTY CXX_STANDARD 17)
+
 # Install step that does 3 things:
 # 1) Cleans binary directory by removing unnecessary files from compilation.
 # 2) Resets file permissions (for example removes executable flag from shared
