Modify delete invalid unit file path for macOS in client project

--- a/server/opensoldatserver.lpi
+++ b/server/opensoldatserver.lpi
@@ -430,7 +430,7 @@
           <SearchPaths>
             <IncludeFiles Value="libs;..\shared;..\3rdparty\Indy10\Lib\System;..\3rdparty\Indy10\Lib\Core;$(ProjOutDir)"/>
             <Libraries Value="build"/>
-            <OtherUnitFiles Value="scriptcore;..\shared;..\shared\network;..\shared\mechanics;..\shared\libs;..\shared\libs\PhysFS;..\shared\libs\GameNetworkingSockets;..\shared\libs\SteamWrapper;..\3rdparty\pascalscript\Source;..\3rdparty\Indy10\Lib\System;..\3rdparty\Indy10\Lib\Core"/>
+            <OtherUnitFiles Value="scriptcore;..\shared;..\shared\network;..\shared\mechanics;..\shared\libs;..\shared\libs\PhysFS;..\shared\libs\GameNetworkingSockets;..\shared\libs\SteamWrapper;..\3rdparty\pascalscript\Source"/>
             <UnitOutputDirectory Value="build\$(TargetOS)"/>
           </SearchPaths>
           <Parsing>
@@ -470,7 +470,7 @@
           <SearchPaths>
             <IncludeFiles Value="libs;..\shared;..\3rdparty\Indy10\Lib\System;..\3rdparty\Indy10\Lib\Core;$(ProjOutDir)"/>
             <Libraries Value="build"/>
-            <OtherUnitFiles Value="scriptcore;..\shared;..\shared\network;..\shared\mechanics;..\shared\libs;..\shared\libs\PhysFS;..\shared\libs\GameNetworkingSockets;..\shared\libs\SteamWrapper;..\3rdparty\pascalscript\Source;..\3rdparty\Indy10\Lib\System;..\3rdparty\Indy10\Lib\Core"/>
+            <OtherUnitFiles Value="scriptcore;..\shared;..\shared\network;..\shared\mechanics;..\shared\libs;..\shared\libs\PhysFS;..\shared\libs\GameNetworkingSockets;..\shared\libs\SteamWrapper;..\3rdparty\pascalscript\Source"/>
             <UnitOutputDirectory Value="build\$(TargetOS)"/>
           </SearchPaths>
           <Parsing>
