--- a/server/opensoldatserver.lpi
+++ b/server/opensoldatserver.lpi
@@ -428,7 +428,7 @@
             <Filename Value="build\opensoldatserver"/>
           </Target>
           <SearchPaths>
-            <IncludeFiles Value="libs;..\shared;..\3rdparty\Indy10\Lib\System;..\3rdparty\Indy10\Lib\Core;$(ProjOutDir)"/>
+            <IncludeFiles Value="..\shared;$(ProjOutDir)"/>
             <Libraries Value="build"/>
             <OtherUnitFiles Value="scriptcore;..\shared;..\shared\network;..\shared\mechanics;..\shared\libs;..\shared\libs\PhysFS;..\shared\libs\GameNetworkingSockets;..\shared\libs\SteamWrapper;..\3rdparty\pascalscript\Source"/>
             <UnitOutputDirectory Value="build\$(TargetOS)"/>
@@ -468,7 +468,7 @@
             <Filename Value="build\opensoldatserver"/>
           </Target>
           <SearchPaths>
-            <IncludeFiles Value="libs;..\shared;..\3rdparty\Indy10\Lib\System;..\3rdparty\Indy10\Lib\Core;$(ProjOutDir)"/>
+            <IncludeFiles Value="..\shared;$(ProjOutDir)"/>
             <Libraries Value="build"/>
             <OtherUnitFiles Value="scriptcore;..\shared;..\shared\network;..\shared\mechanics;..\shared\libs;..\shared\libs\PhysFS;..\shared\libs\GameNetworkingSockets;..\shared\libs\SteamWrapper;..\3rdparty\pascalscript\Source"/>
             <UnitOutputDirectory Value="build\$(TargetOS)"/>
