--- a/client/opensoldat.lpi
+++ b/client/opensoldat.lpi
@@ -608,7 +608,7 @@
         </Mode0>
       </Modes>
     </RunParams>
-    <Units Count="65">
+    <Units Count="66">
       <Unit0>
         <Filename Value="opensoldat.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -746,7 +746,7 @@
         <IsPartOfProject Value="True"/>
       </Unit33>
       <Unit34>
-        <Filename Value="libs\FreeType;libs\openal\freetype.pas"/>
+        <Filename Value="libs\FreeType\freetype.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit34>
       <Unit35>
@@ -869,6 +869,10 @@
         <Filename Value="ClientLauncherIPC.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit64>
+      <Unit65>
+        <Filename Value="libs\openal\openal.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit65>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
