Modify use dsDwarf3 as default debug info type (was default choice)

--- a/client/opensoldat.lpi
+++ b/client/opensoldat.lpi
@@ -59,6 +59,7 @@
           <Linking>
             <Debugging>
               <GenerateDebugInfo Value="False"/>
+              <DebugInfoType Value="dsDwarf3"/>
               <UseLineInfoUnit Value="False"/>
               <StripSymbols Value="True"/>
             </Debugging>
