Modify set Dwarf3 by to be default in client project file

--- a/client/opensoldat.lpi
+++ b/client/opensoldat.lpi
@@ -899,6 +899,11 @@
       <TargetCPU Value="x86_64"/>
       <TargetOS Value="win64"/>
     </CodeGeneration>
+    <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
+    </Linking>
     <Other>
       <Verbosity>
         <ShowNotes Value="False"/>
