--- a/.github/workflows/opensoldat.yml
+++ b/.github/workflows/opensoldat.yml
@@ -220,4 +220,13 @@ jobs:
 
           git tag continuous
           git push --tags origin continuous
+
+          echo debug paths
+          ls
+          ls windows-build/*.zip
+          ls OpenSoldatServer-win32-x64.zip
+          ls OpenSoldat-macos-x64.zip
+          ls linux-build/*.zip
+          ls linux-server-build/*.tar
+
           gh release create continuous windows-build/*.zip OpenSoldatServer-win32-x64.zip OpenSoldat-macos-x64.zip linux-build/*.zip linux-server-build/*.tar --notes "OpenSoldat 1.8 alpha dev build" --title "OpenSoldat 1.8 alpha dev build"
