--- a/.github/workflows/opensoldat.yml
+++ b/.github/workflows/opensoldat.yml
@@ -223,11 +223,11 @@ jobs:
           echo debug paths 3
           if git rev-parse continuous &>/dev/null; then
             echo debug paths 3.1
-            gh release delete continuous --yes
+            gh release delete continuous --yes || echo "Failed to delete GitHub release. Ignoring."
             echo debug paths 3.2
-            git tag --delete continuous
+            git tag --delete continuous || echo "Failed to delete local tag. Ignoring."
             echo debug paths 3.3
-            git push --delete origin continuous
+            git push --delete origin continuous || echo "Failed to delete remote tag. Ignoring."
             echo debug paths 3.4
           fi
           echo debug paths 4
