Add more debug output for ci debugging

--- a/.github/workflows/opensoldat.yml
+++ b/.github/workflows/opensoldat.yml
@@ -212,6 +212,10 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo ci debug 1
+          git rev-parse continuous
+          echo ci debug 1.1
+          git show-ref --tags continuous
+          echo ci debug 1.2
           if git rev-parse continuous &>/dev/null; then
             echo ci debug 2.0
             gh release delete continuous --yes || echo "Failed to delete GitHub release. Ignoring."
@@ -220,6 +224,8 @@ jobs:
             echo ci debug 2.2
             git push --delete origin continuous || echo "Failed to delete remote tag. Ignoring."
             echo ci debug 2.3
+          else
+            echo ci debug 2.9
           fi
 
           echo ci debug 3
