Modify wrap tag in quotes

--- a/.github/workflows/opensoldat.yml
+++ b/.github/workflows/opensoldat.yml
@@ -214,7 +214,7 @@ jobs:
           echo ci debug 1
           git rev-parse continuous
           echo ci debug 1.1
-          git show-ref --tags continuous
+          git show-ref --tags "continuous"
           echo ci debug 1.2
           if git rev-parse continuous &>/dev/null; then
             echo ci debug 2.0
