Modify use different git command for checking existing tag

--- a/.github/workflows/opensoldat.yml
+++ b/.github/workflows/opensoldat.yml
@@ -212,9 +212,12 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo ci debug 1
-          git rev-parse continuous
+          #git rev-parse continuous
           echo ci debug 1.1
-          if git rev-parse continuous &>/dev/null; then
+          git show-ref --tags continuous
+          echo ci debug 1.2
+          #if git rev-parse continuous &>/dev/null; then
+          if ! git show-ref --tags continuous &>/dev/null; then
             echo ci debug 2.0
             gh release delete continuous --yes || echo "Failed to delete GitHub release. Ignoring."
             echo ci debug 2.1
