--- a/.github/workflows/opensoldat.yml
+++ b/.github/workflows/opensoldat.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Lazarus environment
         uses: gcarreno/setup-lazarus@v3.2.17
         with:
-          lazarus-version: 3.0
+          lazarus-version: "3.0"
           #include-packages: "Synapse 40.1"
           #with-cache: true
 
@@ -121,7 +121,7 @@ jobs:
       - name: Setup Lazarus environment
         uses: gcarreno/setup-lazarus@v3.2.17
         with:
-          lazarus-version: 3.0
+          lazarus-version: "3.0"
           #include-packages: "Synapse 40.1"
           with-cache: false
 
