Modify set STEAM_ and ENABLE_FAE_ defines in win x64 debug for easy toggling when testing compiling

--- a/client/opensoldat.lpi
+++ b/client/opensoldat.lpi
@@ -910,7 +910,8 @@
         <ShowHints Value="False"/>
       </Verbosity>
       <CustomOptions Value="-dDEBUG
--dDEVELOPMENT"/>
+-dDEVELOPMENT
+-dSTEAM_"/>
     </Other>
   </CompilerOptions>
   <Debugging>
